abstract styles of submit buttons and use those styles in all components that submit data
remove button styles from a lot of components - edit, add, login, register, update and reset password.

global button styles moved to App.module.scss

--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -1,7 +1,7 @@
 :root {
-    --error: rgb(204, 64, 64);
-    --success: rgb(44, 167, 44);
-    --warning: rgb(255, 205, 112);
+  --error: rgb(204, 64, 64);
+  --success: rgb(44, 167, 44);
+  --warning: rgb(255, 205, 112);
 }
 
 * html,
@@ -35,20 +35,22 @@ ul {
 
 input,
 textarea {
+  font-size: .75rem;
+  padding: .7rem;
+  border: 1px solid rgb(23, 23, 23);
   border-radius: .1rem;
   outline: none;
-  border: 1px solid rgb(23, 23, 23);
   transition: border .2s;
-  padding: .7rem;
 
   &:focus {
-        border: 1px solid white;
-        background-color: rgb(233, 233, 233);
-        transition: border .2s;
-    }
+    border: 1px solid white;
+    background-color: rgb(233, 233, 233);
+    transition: border .2s;
+  }
 
   &::placeholder {
     font-size: .6rem;
+    color: rgb(158, 158, 158);
   }
 
   &:user-invalid {
@@ -60,6 +62,36 @@ textarea {
     border: 1px solid white;
     outline: 1px solid var(--success);
   }
+}
 
-  
+textarea {
+  min-height: 250px;
+  resize: vertical;
+}
+
+label {
+  font-size: .6rem;
+  font-weight: 400;
+  padding-top: .7rem;
+  padding-bottom: .3rem;
+  color: rgb(0, 0, 0);
+  text-align: left;
+}
+
+.submit__button {
+  all: unset;
+  width: fit-content;
+  font-size: .7rem;
+  padding: .5rem 1.5rem;
+  margin-top: .8rem;
+  background-color: rgb(1, 1, 1);
+  color: rgb(231, 231, 231);
+  border-radius: .1rem;
+  transition: background-color .3s;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgb(245, 245, 245);
+    color: black;
+  }
 }
