--- a/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
+++ b/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
@@ -1,14 +1,14 @@
 .delete__button {
     all: unset;
-    font-size: .8rem;
-    padding: .5rem 2.1rem;
+    font-size: .7rem;
+    padding: .5rem 2.5rem;
     color: rgb(207, 55, 55);
     border-radius: .1rem;
     transition: background-color .3s;
     cursor: pointer;
 
     &:hover {
-        background-color: rgb(243, 243, 243);
-        color: black;
+        background-color: rgb(170, 11, 11);
+        color: white;
     }
 }
