--- a/client/vite-project/src/components/session-expired/SessionExpired.module.scss
+++ b/client/vite-project/src/components/session-expired/SessionExpired.module.scss
@@ -16,17 +16,16 @@
     align-items: center;
     // gap: 1rem;
     background-color: white;
-    border-radius: .5rem;
+    border-radius: .1rem;
     padding: 2rem 5rem;
 }
 
 .session__expired__main__text {
     font-size: 2rem;
-    font-weight: 300;
+    font-weight: 200;
     margin: 0;
 
     &::first-letter {
-        font-weight: bold;
         font-size: 3rem;
     }
 
@@ -38,27 +37,9 @@
 }
 
 .session__expired__secondary__text {
-    color: rgb(51, 50, 50);
+    font-size: .75rem;
+    color: rgb(24, 24, 24);
     text-align: center;
-    margin: 0;
+    margin-top: .5rem;
 }
 
-.session__expired__button {
-    all: unset;
-    cursor: pointer;
-    background-color: rgb(31, 31, 31);
-    color: white;
-    padding: .5rem 1.7rem;
-    border-radius: .5rem;
-    font-size: .7rem;
-    font-weight: 400;
-    transition: background-color .3s;
-    width: fit-content;
-    margin-top: 1.5rem;
-
-    &:hover {
-        background-color: rgb(241, 241, 241);
-        color: black;
-        transition: background-color .3s;
-    }
-}
