--- a/client/vite-project/src/components/logout/Logout.module.scss
+++ b/client/vite-project/src/components/logout/Logout.module.scss
@@ -1,6 +1,11 @@
 .logout__btn {
     all: unset;
     color: rgb(34, 33, 33);
+    font-weight: bold;
     cursor: pointer;
     font-size: 1.2rem;
+
+    &:hover {
+        color: rgb(113, 113, 113);
+    }
 }
