--- a/client/vite-project/src/components/navigation/Navigation.module.scss
+++ b/client/vite-project/src/components/navigation/Navigation.module.scss
@@ -6,13 +6,17 @@
     transition: active 5s;
 
     a {
-        padding: .4rem;
-        color: rgb(26, 25, 25);
         font-size: 1.2rem;
+        font-weight: 300;
+        padding: .4rem;
+        color: rgb(17, 17, 17);
         text-decoration: none;
+        transition: transform .2s;
 
         &:hover {
-            color: rgb(95, 109, 114);
+            color: rgb(54, 54, 54);
+            transform: scale(1.1);
+            transition: transform .2s;
         }
     }
 }
@@ -25,16 +29,17 @@
 }
 
 @media (max-width: 1000px) {
+
     .navigation__wrapper a,
     .navigation__wrapper button {
         font-size: 1rem;
-    }    
+    }
 }
 
 @media (max-width: 500px) {
+
     .navigation__wrapper a,
     .navigation__wrapper button {
         font-size: .95rem;
-    }    
+    }
 }
-
