--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -101,32 +101,31 @@
     justify-content: space-between;
 
     &__quote__author {
-        font-size: .75rem;
+        font-size: .65rem;
         color: rgb(228, 228, 228);
-        font-weight: bold;
         text-align: end;
     }
 
     &__quote__text {
-        font-size: .85rem;
+        font-size: .78rem;
+        line-height: 1.25;
         color: rgb(228, 228, 228);
     }
 
     &__navigation__button {
         all: unset;
-        font-weight: bold;
+        padding: .3rem .8rem;
+        font-weight: 400;
         font-size: .6rem;
-        cursor: pointer;
-
+        border-radius: .1rem;
         background-color: white;
         color: black;
-        border-radius: .5rem;
-        padding: .3rem .8rem;
-        transition: background-colors .3s;
+        transition: background-color .3s;
+        cursor: pointer;
 
         &:hover {
-            background-color: rgb(56, 56, 56);
-            color: rgb(238, 238, 238);
+            background-color: rgb(162, 162, 162);
+            color: rgb(53, 53, 53);
             transition: background-color .3s;
         }
     }
