--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -3,9 +3,11 @@
     flex-direction: column;
     justify-content: space-between;
     width: 12rem;
-    height: 14rem;
-    background-color: rgb(12, 12, 12);
-    color: rgb(238, 238, 238);
+    min-height: 10rem;
+    // background-color: rgb(12, 12, 12);
+    background-color: rgb(244, 244, 244);
+    // color: rgb(238, 238, 238);
+    color: rgb(18, 18, 18);
     border-radius: .1rem;
     padding: 1.2rem 1.7rem;
     transition: background-color .5s;
@@ -23,7 +25,7 @@
     }
 
     &__author {
-        font-size: .8rem;
+        font-size: .65rem;
         align-self: end;
     }
 
