--- a/client/vite-project/src/components/reset-password/ResetPassword.module.scss
+++ b/client/vite-project/src/components/reset-password/ResetPassword.module.scss
@@ -34,7 +34,7 @@
 .reset__password__text__subheading {
     justify-self: center;
     text-align: center;
-    font-size: 1rem;
+    font-size: .8rem;
     font-weight: 400;
     color: rgb(37, 37, 37);
     margin: 0;
