--- a/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
+++ b/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // TODO; temporary fix. i need to add pageOffsetY value instead of hardcoding random pixels. keeping the hacky fix for now.
+    height: calc(100% + 80px);
     width: 100%;
-    height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
     top: 0;
