--- a/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
+++ b/client/vite-project/src/components/last-three-quotes/LastThreeQuotes.module.scss
@@ -1,7 +1,8 @@
 .last__three__quotes__container {
-    width: 50%;
+    max-width: 80%;
     display: flex;
     flex-direction: column;
+    // align-items: center;
     gap: .5rem;
 }
 
@@ -24,9 +25,14 @@
 }
 
 .last__three__quote__wrapper {
-    padding: 2rem;
-    color: white;
-    background-color: rgb(17, 13, 13);
+    min-height: 100px;
+    max-width: 400px;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgb(236, 236, 236);
+    color: rgb(24, 24, 24);
     border-radius: .1rem;  
     transition: background-color .5s;
 
@@ -52,10 +58,15 @@
 }
 
 .last__three__quote__author {
-    font-size: .7rem;
-    font-weight: 300;
+    font-size: .6rem;
+    font-weight: 500;
     align-self: end;
     margin: 0;
+}
+
+.last__three__quote__likes__icon {
+    font-size: 1.5rem;
+    color: red;
 }
 
 .likes__icon__and__likes__count__container {
@@ -65,15 +76,8 @@
 }
 
 .last__three__quote__likes__count {
-    font-size: .8rem;
+    font-size: .6rem;
     margin: 0;
     align-self: end;
-}
-
-// 
-@media (max-width: 1000px) {
-    .last__three__quotes__container {
-        width: 80%;
-    }
 }
 
