--- a/client/vite-project/src/components/toaster/Toaster.module.scss
+++ b/client/vite-project/src/components/toaster/Toaster.module.scss
@@ -1,15 +1,15 @@
 .toaster__container {
     // background-color: rgba(245, 245, 245, 0.9);
-    border-radius: .9rem;
+    border-radius: .1rem;
     padding: 2rem 1rem;
     opacity: 0;
     // transition: opacity .1s;
-    box-shadow: .1rem .1rem 1rem .1rem rgb(194, 194, 194);
+    box-shadow: .1rem .1rem 1rem .1rem rgb(230, 230, 230);
 }
 
 .error__message {
     font-size: .8rem;
-    font-weight: bold;
+    font-weight: 400;
     color: rgb(255, 57, 57);
     text-align: center;
 }
