--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -39,7 +39,7 @@
 
     &__text {
         font-weight: 300;
-        line-height: 1.4;
+        line-height: 1.2;
         width: 75%;
         align-self: center;
         text-align: center;
@@ -99,8 +99,13 @@
     }
 
     .quote__details__text {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        line-height: 1.3;
         width: 100%;
+    }
+
+    .quote__details__author {
+        font-size: .7rem;
     }
 
     .action__buttons {
