change background color of quote card on hover

--- a/client/vite-project/src/components/quote-card/QuoteCard.module.scss
+++ b/client/vite-project/src/components/quote-card/QuoteCard.module.scss
@@ -16,6 +16,7 @@
     &:hover {
         cursor: pointer;
         background-color: rgb(252, 252, 252);
+        background-color: rgb(184, 184, 184, .6);
         color: rgb(32, 32, 32);
     }
 
