--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 3fr, 100px, 3fr, 100px, 1fr;
     width: 70vw;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -38,15 +39,16 @@
     justify-content: space-around;
 
     &__text {
+        font-size: 1.1rem;
+        line-height: 1.35;
         font-weight: 300;
-        line-height: 1.2;
         width: 75%;
         align-self: center;
         text-align: center;
     }
 
     &__author {
-        font-size: .8rem;
+        font-size: .6rem;
         font-weight: 500;
         align-self: end;
     }
@@ -91,7 +93,7 @@
     justify-self: center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
 
     .back__button, 
     .likes__details {
@@ -99,13 +101,13 @@
     }
 
     .quote__details__text {
-        font-size: 1.1rem;
-        line-height: 1.3;
+        font-size: 1rem;
+        line-height: 1.4;
         width: 100%;
     }
 
     .quote__details__author {
-        font-size: .7rem;
+        font-size: .65rem;
     }
 
     .action__buttons {
