center error toaster in its grid track

--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -82,6 +82,7 @@
 .edit__form__toaster__container {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
+    align-self: center;
 }
 
 .edit__form__success__modal__container {
