change position of success modal on smaller screens
make sure it stretches as it shrank in its grid track and it was causing text to squish

--- a/client/vite-project/src/components/add-quote/AddQuote.module.scss
+++ b/client/vite-project/src/components/add-quote/AddQuote.module.scss
@@ -68,7 +68,7 @@
 }
 
 // styles for smaller screens / responsiveness
-@media (max-width: 500px) {
+@media (max-width: 800px) {
     .add__form__container {
         max-width: 80%;
         margin: 0 auto;
@@ -79,6 +79,10 @@
     }
 
     .add__form__toaster__container {
+        grid-column: 1/4;
+    }
+
+    .add__form__success__modal__container {
         grid-column: 1/4;
     }
 }
