--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -87,7 +87,7 @@
 
 .edit__form__success__modal__container {
     grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
 }
 
 // temporary styles - just placing custom select in a acceptable place just so I can see it (working on its implementation at the moment)
@@ -113,5 +113,13 @@
         align-self: start;
         justify-self: start;
         margin-top: 1.5rem;
+    }
+
+    .edit__form__toaster__container {
+        grid-column: 1 / 4;
+    }
+
+    .edit__form__success__modal__container {
+        grid-column: 1 / 4;
     }
 }
