remove box-shadow of success modal and for now i just have a simple border
most likely this design will change, but keeping it as is for now, so i can move forward with more major things as deployment is looming

--- a/client/vite-project/src/components/success-modal/SuccessModal.module.scss
+++ b/client/vite-project/src/components/success-modal/SuccessModal.module.scss
@@ -1,7 +1,7 @@
 .success__modal__container {
     border-radius: .1rem;
     padding: 1rem;
-    box-shadow: .1rem .1rem .2rem .1rem rgb(61, 61, 61);  
+    border: 1px solid black;
 }
 
 .success__modal__icon__container {
