place form state components / messages on reset-password page
import error toaster, success modal and loader
render them conditionally based on user input / server response
place them on the grid and wrap each component in a html element / div in this case

--- a/client/vite-project/src/components/reset-password/ResetPassword.module.scss
+++ b/client/vite-project/src/components/reset-password/ResetPassword.module.scss
@@ -1,7 +1,7 @@
 .reset__password__container {
     display: grid;
     // grid-template-columns: max-content;
-    grid-template-rows: 250px 1fr;
+    grid-template-rows: 250px fit-content fit-content;
     justify-content: center;
     padding: 2rem;
 }
@@ -49,4 +49,22 @@
 .form__data {
     display: grid;
     gap: .2rem;
+}
+
+// state (success, loading, error) container styles 
+
+.error__toaster__container {
+    grid-row: 3 / 4;
+    width: 80%;
+    justify-self: center;
+}
+
+.success__modal__container {
+    grid-row: 2 / 3;
+}
+
+.loader__container {
+    grid-row: 2 / 3;
+    justify-self: center;
+    align-self: center;
 }
