--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -4,20 +4,16 @@
   --warning: rgb(255, 205, 112);
 }
 
-* html,
+html,
 body {
   box-sizing: border-box;
   height: 100%;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  scrollbar-color: black;
-  scrollbar-arrow-color: black;
-  scrollbar-track-color: white;
-  scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 :global(.active) {
-  // outline: .1px solid skyblue;
   outline: .1px solid rgb(51, 51, 51);
   border-radius: .1rem;
 }
