--- a/client/vite-project/src/App.module.scss
+++ b/client/vite-project/src/App.module.scss
@@ -13,8 +13,20 @@ body {
   scrollbar-gutter: stable;
 }
 
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgb(201, 201, 201);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(18, 18, 18);
+}
+
 :global(.active) {
-  outline: .1px solid rgb(51, 51, 51);
+  outline: .1px solid rgb(13, 13, 13);
   border-radius: .1rem;
 }
 
