change styles and html of user profile page
add a proper heading and subheading as well as wrap them in their own container
change class names to make it clearer what element a class is applied to

--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -6,41 +6,64 @@
     grid-template-rows: 15rem 10rem 10rem 1fr;
 }
 
-.profile__page__welcome__message__container {
+.profile__page__main__text__container {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
-    align-self: start;
-    justify-self: start;
-    border-radius: .5rem;
-    padding: 1rem 2rem;
-}
+    max-width: 90%;
+    margin: 0 auto;
 
-.profile__page__welcome__message {
-    font-size: .8rem;
-    font-weight: 400;
-    margin: 0;
-    display: inline-block;
-
-    &__email {
-        font-size: .8rem;
+    &__heading {
+        text-align: center;
+        font-size: 4rem;
         font-weight: 400;
-        padding-left: .4rem;
 
         &::after {
             content: '.';
             color: red;
             font-weight: bold;
         }
+
+        &::first-letter {
+            font-size: 5rem;
+            font-weight: bold;
+        }
     }
 
-    &__info {
-        font-size: 1.5rem;
-        text-align: center;
+    &__subheading {
+        font-size: 1.2rem;
         font-weight: 300;
-        align-self: center;
-        margin-top: 3rem;
+        text-align: center;
+        color: rgb(45, 45, 45);
     }
 }
+
+// .profile__page__welcome__message__container {
+//     grid-row: 1 / 2;
+//     grid-column: 1 / 3;
+//     align-self: start;
+//     justify-self: start;
+//     border-radius: .5rem;
+//     padding: 1rem 2rem;
+// }
+
+// .profile__page__welcome__message {
+//     font-size: .8rem;
+//     font-weight: 400;
+//     margin: 0;
+//     display: inline-block;
+
+//     &__email {
+//         font-size: .8rem;
+//         font-weight: 400;
+//         padding-left: .4rem;
+
+//         &::after {
+//             content: '.';
+//             color: red;
+//             font-weight: bold;
+//         }
+//     }
+// }
 
 .profile__page__update__password__container {
     grid-row: 2 / 3;
@@ -53,29 +76,7 @@
     justify-content: end;
 }
 
-
-.profile__page__heading {
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
-    font-size: 2.8rem;
-    font-weight: 300;
-    text-align: center;
-    line-height: 1.05;
-    margin: 0;
-
-    &::after {
-        content: '.';
-        color: red;
-        font-weight: bold;
-    }
-
-    &::first-letter {
-        font-size: 5rem;
-        // font-weight: bold;
-    }
-}
-
-.quotes__container {
+.quote__card__container {
     grid-column: 1 / 3;
     grid-row: 4/5;
     display: flex;
@@ -88,6 +89,15 @@
     margin: 0 auto;
 
     padding: 3rem 0;
+}
+
+.profile__page__quote__card__container__heading {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+    font-size: 2.5rem;
+    font-weight: 100;
+    text-align: center;
+    margin: 0;
 }
 
 .quote__card__wrapper {
@@ -157,21 +167,15 @@
 }
 
 // styles for quotes container scrollbar
-
-.quotes__container::-webkit-scrollbar {
+.quote__card__container::-webkit-scrollbar {
     width: 5px;
 }
 
-// .quotes__container::-webkit-scrollbar-track {
-//     background-color: black;
-// }
-
-.quotes__container::-webkit-scrollbar-thumb {
+.quote__card__container::-webkit-scrollbar-thumb {
     background-color: rgb(236, 20, 20);
 }
 
-// styles for small sizes
-
+// styles for small screns / mobile devices
 @media (max-width: 500px) {
 
     .page__wrapper {
@@ -180,19 +184,19 @@
     }
 
     // Not perfect at all. Needs better responsive styles - especially for quotes__container element
-    .quotes__container {
+    .quote__card__container {
         min-height: 300px;
     }
 
-    .profile__page__heading {
+    .profile__page__quote__card__container__heading {
         padding-bottom: 2rem;
     }
 
-    .profile__page__welcome__message__container {
-        grid-row: 1 / 2;
-        grid-column: 1 / 3;
-        justify-self: center;
-    }
+    // .profile__page__welcome__message__container {
+    //     grid-row: 1 / 2;
+    //     grid-column: 1 / 3;
+    //     justify-self: center;
+    // }
 
     .profile__page__update__password__container {
         grid-row: 2 / 3;
