--- a/client/vite-project/src/components/home/Home.module.scss
+++ b/client/vite-project/src/components/home/Home.module.scss
@@ -15,7 +15,7 @@
     font-size: 4rem;
     font-weight: 400;
     text-align: center;
-    margin-bottom: 0;
+    margin: 0;
 
     &::after {
         content: '.';
