change the idea behind update password functionality
add a route to /users/update-password and render UpdatePassword component there.

Add a <Link> to this path inside UserProfile component - decided against making it a modal as Reset password follow this same pattern, so keeping it consistent

--- a/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
+++ b/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
@@ -1,7 +1,43 @@
+.update__password__page__container {
+    max-width: 1000px;
+    // width: 80%;
+    margin: 0 auto;
+}
+
+.update__password__text__container {
+
+    &__main__text {
+        font-size: 4rem;
+        font-weight: 400;
+        text-align: center;
+        margin: 0;
+        margin-top: 2rem;
+        
+        &::after {
+            content: '.';
+            color: red;
+            font-weight: bold;
+        }
+
+        &::first-letter {
+            font-size: 5rem;
+            font-weight: bold;
+        }
+    }
+
+    &__secondary__text {
+        font-size: 1.1rem;
+        text-align: center;
+        font-weight: 300;
+    }
+
+}
+
 .update__password__form {
-    display: grid;
+
+    margin-top: 5rem;
 
     &__input {
-        min-width: 15rem;
+        width: 100%;
     }
 }
