wrap loader and success modals in containers and center them

--- a/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
+++ b/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
@@ -41,3 +41,10 @@
         width: 100%;
     }
 }
+
+.update__password__page__loader__container,
+.update__password__page__success__modal__container {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
