--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -3,7 +3,7 @@
     max-width: 1000px;
     margin: 0 auto;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 15rem 10rem 10rem 1fr;
+    grid-template-rows: 15rem fit-content 10rem 1fr;
 }
 
 .profile__page__main__text__container {
@@ -37,17 +37,6 @@
     }
 }
 
-.profile__page__update__password__container {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    justify-self: center;
-    align-self: start;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    justify-content: end;
-}
-
 .quote__card__container {
     grid-column: 1 / 3;
     grid-row: 4/5;
@@ -71,13 +60,13 @@
     font-weight: 100;
     text-align: center;
     margin: 0;
+    padding: 3.5rem 0;
 }
 
 .quote__card__wrapper {
     width: 200px;
     max-height: 170px;
     padding: .75rem 1.5rem;
-    border-radius: .1rem;
     background-color: rgb(22, 22, 22);
     color: white;
     display: flex;
@@ -148,28 +137,90 @@
     background-color: rgb(236, 20, 20);
 }
 
+// styles for user info section
+
+.profile__page__user__info {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    max-width: 800px;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin: 0 auto;
+    padding: 2.5rem 0;
+    height: 3.5rem;
+
+    &__email__container {
+        // background-color: rgb(243, 243, 243);
+        // padding: .3rem 1rem;
+
+        &__label {
+            font-size: .7rem;
+            text-align: center;
+            margin: 0;
+        }
+
+        &__email {
+            font-size: .8rem;
+            text-align: center;
+            margin: 0;
+        }
+    }
+
+    &__update__password__button__container {
+        
+        &__label {
+            font-size: .7rem;
+            text-align: center;
+            margin: 0;
+        }
+
+        &__button {
+            display: block;
+            text-align: center;
+            font-size: .8rem;
+            font-weight: bold;
+            transition: transform .2s;
+            color: black;
+
+            &:hover {
+                transform: scale(1.1);
+                transition: transform .2s;
+            }
+        }
+    }
+
+    &__number__of__added__quotes__container {
+        
+        &__label {
+            font-size: .7rem;
+            text-align: center;
+            margin: 0;
+        }
+
+        &__count {
+            font-size: .8rem;
+            text-align: center;
+            margin: 0;
+        }
+    }
+}
+
+.profile__page__user__info__email__container,
+.profile__page__user__info__number__of__added__quotes__container,
+.profile__page__user__info__update__password__button__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 // styles for small screns / mobile devices
 @media (max-width: 500px) {
-
-    .page__wrapper {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 17rem 10rem 1fr;
-    }
 
     // Not perfect at all. Needs better responsive styles - especially for quotes__container element
     .quote__card__container {
         min-height: 300px;
         max-height: 400px;
-    }
-
-    .profile__page__quote__card__container__heading {
-        padding-bottom: 2rem;
-    }
-
-    .profile__page__update__password__container {
-        grid-row: 2 / 3;
-        grid-column: 1 / 3;
-        justify-self: center;
-        align-self: start;
     }
 }
