--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -3,11 +3,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:url"
+    <meta name="og:url"
         content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="{{quoteDetails.text}}" />
-    <meta property="og:description" content="{{quoteDetails.author}}" />
+    <meta name="og:type" content="post" />
+    <meta name="og:title" content="{{quoteDetails.author}}" />
+    <meta name="og:description" content="{{quoteDetails.text}}" />
 
     {{!-- <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
     <title>Quote Details Page</title>
