--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -6,7 +6,7 @@
     <meta name="og:url"
         content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
     <meta name="og:type" content="post" />
-    <meta name="og:title" content="{{quoteDetails.author}}" />
+    <meta name="og:author" content="{{quoteDetails.author}}" />
     <meta name="og:description" content="{{quoteDetails.text}}" />
 
     {{!-- <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
