lets see if a static image will be loaded at least

--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -6,7 +6,7 @@
     <meta property="og:url" content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
     <meta property="og:author" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
-    <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
+    <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
     {{!--
     <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
     <title>Quote Details Page</title>
