commenting out code to revert changes made today to understand to isolate the cause of this weird behavior.
it may also be related to cache. but we will see now.

--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -6,7 +6,7 @@
     <meta property="og:url" content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
     <meta property="og:author" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
-    <meta property="og:image:url" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
+    {{!-- <meta property="og:image:url" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" /> --}}
     {{!--
     <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
     <title>Quote Details Page</title>
