--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -3,11 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:url" content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
+    <meta property="og:url" content="https://fanerotim-quotes.netlify.app/{{quoteDetails.id}}" />
     <meta property="og:author" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
-    <meta property="og:image:url" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
-    {{!--
-    <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
+    <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
     <title>Quote Details Page</title>
 </head>
