--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:url" content="https://fanerotim-quotes.netlify.app/quotes/{{quoteDetails.id}}" />
+    <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
     <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
