--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -7,6 +7,6 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
-    <meta property="og:image" content="/assets/ogImageTest.png" />
+    <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
     <title>Quote Details Page</title>
 </head>
