--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -3,12 +3,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:url"
-        content="http://localhost:3000/quotes/{{quoteDetails.id}}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="{{quoteDetails.text}}" />
-    <meta property="og:description" content="{{quoteDetails.author}}" />
-
-    {{!-- <link rel="stylesheet" href="./static/styles/styles.css" /> --}}
+    <meta property="og:url" content="https://fanerotim-quotes.netlify.app/quotes/{{quoteDetails.id}}" />
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="{{quoteDetails.author}}" />
+    <meta property="og:description" content="{{quoteDetails.text}}" />
+    <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
     <title>Quote Details Page</title>
 </head>
