--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -7,6 +7,6 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
-    <meta property="og:image" content="https://fanerotim-quotes.netlify.app/ogImageTest.png" />
+    <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
     <title>Quote Details Page</title>
 </head>
