testing a default svg

--- a/server/views/ogImage.hbs
+++ b/server/views/ogImage.hbs
@@ -1,3 +1,10 @@
-<svg>
-    {{quoteDetails.text}}
+<svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg">
+  <style>
+    .small {
+      font: italic 5px sans-serif;
+    }
+
+  </style>
+
+  <text x="20" y="35" class="small">{{quoteDetails.text}}</text>
 </svg>
