adding image type and removing xmlns
this is still test. i will be changing the svg's design once I make it render in facebook's previews

--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -8,5 +8,6 @@
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
     <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
+    <meta property="og:image:type" content="image/svg+xml" />
     <title>Quote Details Page</title>
 </head>
