--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -8,5 +8,8 @@
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
     <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="A quote from {{quoteDetails.author}}" />
     <title>Quote Details Page</title>
 </head>
