--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -4,9 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:url" content="https://fanerotim-quotes.netlify.app/quotes/{{quoteDetails.id}}" />
-    <meta property="og:type" content="article"/>
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
     <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="A quote from {{quoteDetails.author}}" />
     <title>Quote Details Page</title>
 </head>
