--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -10,6 +10,6 @@
     <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
-    <meta property="og:image:alt" content="A quote from {{quoteDetails.author}}" />
+    <meta property="og:image:alt" content="A quote by {{quoteDetails.author}}" />
     <title>Quote Details Page</title>
 </head>
