--- a/server/views/bot.hbs
+++ b/server/views/bot.hbs
@@ -8,8 +8,7 @@
     <meta property="og:title" content="{{quoteDetails.author}}" />
     <meta property="og:description" content="{{quoteDetails.text}}" />
     <meta property="og:image" content="https://quotes-117d.onrender.com/quotes/ogImage/{{quoteDetails.id}}" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="A quote by {{quoteDetails.author}}" />
     <title>Quote Details Page</title>
 </head>
