--- a/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
+++ b/client/vite-project/src/components/buttons/delete-btn/DeleteButton.module.scss
@@ -1,8 +1,10 @@
 .delete__button {
     all: unset;
     font-size: .7rem;
+    font-weight: bold;
     padding: .5rem 2.5rem;
     color: rgb(207, 55, 55);
+    outline: 1px solid rgb(220, 220, 220);
     border-radius: .1rem;
     transition: background-color .3s;
     cursor: pointer;
@@ -10,5 +12,6 @@
     &:hover {
         background-color: rgb(170, 11, 11);
         color: white;
+        outline: none;
     }
 }
